# zoneop

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
papyrus-src/: ZoneOp.psc
src/: PCH.h  Papyrus.cpp  Papyrus.h  ZoneDataHandler.cpp  ZoneDataHandler.h  main.cpp
